# fac_meson

./: .gitignore  README.md  make_version.py  meson.build  pyproject.toml
pfac/: mpy.c  rfac.py
subprojects/coul/: meson.build
subprojects/faclib/: meson.build  sysdef.h
subprojects/ionis/: meson.build
subprojects/lapack/: meson.build
subprojects/mblas/: meson.build
subprojects/minpack/: meson.build
subprojects/mpfun/: meson.build
subprojects/ode/: meson.build
subprojects/qedmod/: meson.build
subprojects/quadpack/: meson.build
subprojects/toms/: meson.build
