project('lapack', 'fortran')

project_source_files = [
    'dbdsdc.f',
    'dbdsqr.f',
    'dgbsv.f',
    'dgbtf2.f',
    'dgbtrf.f',
    'dgbtrs.f',
    'dgebak.f',
    'dgebal.f',
    'dgebd2.f',
    'dgebrd.f',
    'dgeev.f',
    'dgehd2.f',
    'dgehrd.f',
    'dgelq2.f',
    'dgelqf.f',
    'dgeqr2.f',
    'dgeqrf.f',
    'dgesdd.f',
    'dgesv.f',
    'dgetf2.f',
    'dgetrf.f',
    'dgetrs.f',
    'dhseqr.f',
    'dlabad.f',
    'dlabrd.f',
    'dlacpy.f',
    'dladiv.f',
    'dlae2.f',
    'dlaed0.f',
    'dlaed1.f',
    'dlaed2.f',
    'dlaed3.f',
    'dlaed4.f',
    'dlaed5.f',
    'dlaed6.f',
    'dlaed7.f',
    'dlaed8.f',
    'dlaed9.f',
    'dlaeda.f',
    'dlaev2.f',
    'dlahqr.f',
    'dlahrd.f',
    'dlaln2.f',
    'dlamch.f',
    'dlamrg.f',
    'dlange.f',
    'dlanhs.f',
    'dlansb.f',
    'dlansp.f',
    'dlanst.f',
    'dlanv2.f',
    'dlapy2.f',
    'dlar2v.f',
    'dlarf.f',
    'dlarfb.f',
    'dlarfg.f',
    'dlarft.f',
    'dlarfx.f',
    'dlargv.f',
    'dlartg.f',
    'dlartv.f',
    'dlas2.f',
    'dlascl.f',
    'dlasd0.f',
    'dlasd1.f',
    'dlasd2.f',
    'dlasd3.f',
    'dlasd4.f',
    'dlasd5.f',
    'dlasd6.f',
    'dlasd7.f',
    'dlasd8.f',
    'dlasda.f',
    'dlasdq.f',
    'dlasdt.f',
    'dlaset.f',
    'dlasq1.f',
    'dlasq2.f',
    'dlasq3.f',
    'dlasq4.f',
    'dlasq5.f',
    'dlasq6.f',
    'dlasr.f',
    'dlasrt.f',
    'dlassq.f',
    'dlasv2.f',
    'dlaswp.f',
    'dopgtr.f',
    'dopmtr.f',
    'dorg2l.f',
    'dorg2r.f',
    'dorgbr.f',
    'dorghr.f',
    'dorgl2.f',
    'dorglq.f',
    'dorgqr.f',
    'dorm2r.f',
    'dormbr.f',
    'dorml2.f',
    'dormlq.f',
    'dormqr.f',
    'dsbev.f',
    'dsbtrd.f',
    'dspev.f',
    'dspevd.f',
    'dsptrd.f',
    'dstedc.f',
    'dsteqr.f',
    'dsterf.f',
    'dtrevc.f',
    'ieeeck.f',
    'ilaenv.f',
]

project_target = static_library(
    meson.project_name(),
    project_source_files,
    dependencies: [dependency('openmp'), dependency('threads')]
)

project_dep = declare_dependency(link_with: project_target)
set_variable(meson.project_name() + '_dep', project_dep)
